added passenger prices to offer
